--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="nb">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="scss/style.scss" type="text/scss">
+        <link rel="stylesheet" href="css/style.css" type="text/scss">
         <title>Velocity</title>
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="#">Hjem</a></li>
-                    <li><a href="#">Hjem</a></li>
-                    <li><a href="#">Hjem</a></li>
-                </ul>
-            </nav>
-        </header>
+        <h1>Title</h1>
     </body>
 </html>
