Setup repeat og css + en del html kode

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css" type="text/scss">
+        <link rel="stylesheet" href="css/style.css">
         <title>Velocity</title>
     </head>
     <body>
-        <h1>Title</h1>
+        <header>
+            <nav>
+                <span>
+                    <a href="index.html">Logo</a>
+                </span>
+                <ul>
+                    <li><a href="delivery-return.html">Services</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1>VELOCITY</h1>
+        <main>
+        </main>
     </body>
 </html>
