--- a/index.html
+++ b/index.html
@@ -4,64 +4,79 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <script src="https://kit.fontawesome.com/9748fc3881.js" crossorigin="anonymous"></script>
         <title>Velocity</title>
     </head>
     <body>
-        <header>
-            <nav>
+        <div class="main-grid">
+            <header>
                 <span>
                     <a id="logo" href="index.html">VELOCITY</a>
                 </span>
-                <ul class="navigation-bar">
-                    <li><a href="delivery-return.html">Services</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <input type="text" placeholder="Search...">
-                </ul>
-            </nav>
-        </header>
-        <h1>VELOCITY</h1>
-        <hr>
-        <main>
-            <section class="sale-cover">
-                <a href="products.html"><img src="css/img/sale-cover.jpeg" alt="Sale cover image"></a>
-                <h2> SALE </h2>
-                <hr>
-            </section>
-            <section class="categories">
-                <img src="css/img/male-runner.jpg">
-                <img src="css/img/female-runner.jpg">
-                <hr>
-            </section>
-            <section class="bestseller-men">
-                <h2>Bestsellers - Men</h2>
-                <img src="css/img/male-shoes1.jpg">
-                <img src="css/img/male-shoes1.jpg">
-                <img src="css/img/male-shoes1.jpg">
-                <hr>
-            </section>
-            <section class="bestseller-women">
-                <h2>Bestsellers - Women</h2>
-                <img src="css/img/female-shoes1.avif">
-                <img src="css/img/female-shoes1.avif">
-                <img src="css/img/female-shoes1.avif">
-                <hr>
-            </section>
-            <article class="news-letter">
-                <h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
-                <form id="newsletter-registration" method="post" action="#" autocomplete="on">
-                    <span onclick="openClose('none')"></span>
-                    <h3>Sign up for our newsletter</h3>
-                    <label for="name">First name
-                        <input type="text" name="name" placeholder="Nora">
-                    </label>
-                    <label for="last-name">Last name
-                        <input type="text" name="last-name" placeholder="Nordmann">
-                    </label>
-                    <label for="email-registration">E-mail address</label>
-                    <input type="email" name="email-registration" id="email-registration" placeholder="nora@email.com">
-                </form>
-            </article>
-        </main>
-    </body>
+                <nav class="nav">
+                    <ul>
+                    <a href="index.html" class="home"></a>
+                    <a href="products.html" class="products"></a>
+                    <a href="delivery-return.html" class="delivery-return"></a>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                 <h1 class="title">VELOCITY</h1>
+                <p>Quality and Speed</p>
+                <section class="sale-cover">
+                    <a href="products.html"><img src="css/img/sale-cover.jpeg" alt="Sale cover image"></a>
+                    <h2> SALE </h2>
+                    <hr>
+                </section>
+                <section class="categories">
+                    <img src="css/img/male-runner.jpg" alt="male runner">
+                    <img src="css/img/female-runner.jpg" alt="female runner">
+                </section>
+                <section class="bestseller-men">
+                    <h2>Bestsellers - Men</h2>
+                    <a href="products.html"><img src="css/img/male-shoes1.jpg" alt="male runner shoes"></a>
+                    <a href="products.html"><img src="css/img/male-shoes1.jpg" alt="male runner shoes"></a>
+                    <a href="products.html"><img src="css/img/male-shoes1.jpg" alt="male runner shoes"></a>
+                </section>
+                <section class="bestseller-women">
+                    <h2>Bestsellers - Women</h2>
+                    <a href="products.html"><img src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+                    <a href="products.html"><img src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+                    <a href="products.html"><img src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+            </main>
+            <footer>
+                <article class="news-letter">
+                    <h2>Want to receive the latest news on the best shoes?</h2>
+                    <form id="newsletter-registration" method="post" action="#" autocomplete="on">
+                        <span onclick="openClose('none')"></span>
+                        <h3>Sign up for our newsletter</h3>
+                        <label for="first-name">First name
+                            <input type="text" id="first-name" name="name" placeholder="Nora">
+                        </label>
+                        <label for="last-name">Last name
+                            <input type="text" id="last-name" name="last-name" placeholder="Nordmann">
+                        </label>
+                        <label for="email-registration">E-mail address</label>
+                        <input type="email" name="email-registration" id="email-registration" placeholder="nora@email.com">
+                        <label class="newsletter-interest">What are you interested in?</label>
+                        <label class="alternative-men">Running shoes for men.
+                            <input type="radio" value="Running shoes for men." id="alternative-men" name="newsletter-interest">
+                        </label> 
+                        <label class="alternative-women">Running shoes for women.
+                            <input type="radio" value="Running shoes for women." id="alternative-women" name="newsletter-interest">
+                        </label>   
+                        <button class="button">Subscribe</button>                
+                    </form>
+                </article>
+                <nav>
+                    <ul>
+                        <li><a class="footer-links" href="products.html">Products</a>
+                        <li><a class="footer-links"href="delivery-return.html">Delivery & Return</a>
+                        <li><a class="footer-links"href="#">About</a>
+                        <li><a class="footer-links"href="#">Follow us</a>
+                       <button class="button" onclick="window.location.href='index.html';">Back to the top</button>
+                    </ul>
+                </nav>
+            </footer>
+        </div>
 </html>
