--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 </span>
                 <nav class="nav">
                     <ul>
-                    <a href="index.html" class="home"></a>
-                    <a href="products.html" class="products"></a>
-                    <a href="delivery-return.html" class="delivery-return"></a>
+                        <li><a href="index.html"></a></li>
+                        <li><a href="products.html"></a></li>
+                        <li><a href="delivery-return.html"></a></li>
                     </ul>
                 </nav>
             </header>
@@ -43,6 +43,7 @@
                     <a href="products.html"><img src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
                     <a href="products.html"><img src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
                     <a href="products.html"><img src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+                </section>
             </main>
             <footer>
                 <article class="news-letter">
@@ -71,9 +72,9 @@
                 <nav>
                     <ul>
                         <li><a class="footer-links" href="products.html">Products</a>
-                        <li><a class="footer-links"href="delivery-return.html">Delivery & Return</a>
-                        <li><a class="footer-links"href="#">About</a>
-                        <li><a class="footer-links"href="#">Follow us</a>
+                        <li><a class="footer-links" href="delivery-return.html">Delivery & Return</a>
+                        <li><a class="footer-links" href="#">About</a>
+                        <li><a class="footer-links" href="#">Follow us</a>
                        <button class="button" onclick="window.location.href='index.html';">Back to the top</button>
                     </ul>
                 </nav>
