Second draft for finished project.

--- a/index.html
+++ b/index.html
@@ -22,23 +22,32 @@
                  <h1 class="title">VELOCITY</h1>
                 <section class="sale-cover">
                     <a href="products.html"><img class="images" src="css/img/sale-cover.jpeg" alt="Sale cover image"></a>
+                    <!--sale cover image source: https://www.runnersworld.com/gear/g43941809/running-shoe-memorial-day-sale/-->
                     <h2 class="title2"> SALE </h2>
                 </section>
                 <section class="flex-section">
                     <img class="images" src="css/img/male-runner.jpg" alt="male runner">
+                    <!--Male runner source: https://www.istockphoto.com/photo/dynamic-running-uphill-on-trail-male-athlete-runner-side-view-gm862317986-142907437-->
                     <img class="images" src="css/img/female-runner.jpg" alt="female runner">
+                    <!--Female runner source: https://www.123rf.com/photo_20617366_running-sport-fitness-woman-closeup-of-female-legs-and-shoes-in-action-girl-athlete-fitness-runner.html-->
                 </section>
                 <section class="flex-section">
                     <h2>Bestsellers - Men</h2>
                     <a href="products.html"><img class="images" src="css/img/male-shoes1.jpg" alt="male runner shoes"></a>
+                    <!--Male shoes1 source: https://www.runnersworld.com/gear/a26028922/running-shoes-for-men/-->
                     <a href="products.html"><img class="images" src="css/img/male-shoes1.jpg" alt="male runner shoes"></a>
+                    <!--Male shoes1 source: https://www.runnersworld.com/gear/a26028922/running-shoes-for-men/-->
                     <a href="products.html"><img class="images" src="css/img/male-shoes1.jpg" alt="male runner shoes"></a>
+                    <!--Male shoes1 source: https://www.runnersworld.com/gear/a26028922/running-shoes-for-men/-->
                 </section>
                 <section class="flex-section">
                     <h2>Bestsellers - Women</h2>
                     <a href="products.html"><img class="images" src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+                    <!--Female shoes1 source: https://www.runnersworld.com/gear/a25578469/best-running-shoes-for-women/-->
                     <a href="products.html"><img class="images" src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+                    <!--Female shoes1 source: https://www.runnersworld.com/gear/a25578469/best-running-shoes-for-women/-->
                     <a href="products.html"><img class="images" src="css/img/female-shoes1.avif" alt="female runner shoes"></a>
+                    <!--Female shoes1 source: https://www.runnersworld.com/gear/a25578469/best-running-shoes-for-women/-->
                 </section>
             </main>
             <footer>
