--- a/products.html
+++ b/products.html
@@ -23,6 +23,7 @@
                 <section class="product">
                     <article class="product-image">
                         <img src="css/img/female-shoes1.avif" alt="female running shoes">
+                        <!--Female shoes1 source: https://www.runnersworld.com/gear/a25578469/best-running-shoes-for-women/-->
                     </article>
                     <article class="product-text">
                         <span class="product-categort">Women's Shoes</span>
