Final draft for finished project.

--- a/delivery-return.html
+++ b/delivery-return.html
@@ -10,7 +10,7 @@
         <div id="grid-container">
             <header>
                 <nav class="flex-section">
-                    <a id="logo" href="index.html">Delivery and Return</a>
+                    <a id="logo" href="index.html">VELOCITY</a>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
@@ -105,7 +105,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
               </article>
               <article>
-                  <button class="button" onclick="window.location.href='index.html';">Back to the top</button>
+                  <button class="button" onclick="window.location.href='delivery-return.html';">Back to the top</button>
               </article>
           </footer>
       </div>
